examples/neg/typer/expected_args_got_tuple.effekt
def foo(x: Int, s: String): Int = 42

def main() = {
  val _ = foo((42, "hello"))
}